Implement create mission on web
