# server/docs/swagger.json
@@ -143,6 +143,13 @@
                 "summary": "Create Mission",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Session ID",
+                        "name": "sessionID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "description": "Create Mission Request",
                         "name": "request",
                         "in": "body",
@@ -229,6 +236,13 @@
                         "description": "Mission ID",
                         "name": "missionID",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Session ID",
+                        "name": "sessionID",
+                        "in": "query",
                         "required": true
                     },
                     {
